# comfy-rest-ext

./: .gitignore  AGENTS.md  PLAN.md  README.md  __init__.py  pyproject.toml
api/: __init__.py  extension.py
api/models/: __init__.py  dependencies.py  download.py  management.py  nodes.py  pr_cache.py  snapshot.py
api/schemas/: __init__.py  requests.py
api/tasks/: __init__.py  deps_task.py  download_task.py  persistence.py  registry.py  task_queue.py
docs/: comfy-rest-ext-api.md
docs/references/: API-implementation-reference.md  API-supplement-proposal.md  API.md  openapi.yaml
tests/: __init__.py  conftest.py  test_dependencies.py  test_model_management.py  test_task_queue.py  test_url_parsing.py
