[project]
name = "comfy-rest-ext"
version = "0.1.0"
description = "ComfyUI REST API Extension - adds missing REST API endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pathspec>=0.11.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.comfy]
# ComfyUI custom node metadata
node_id = "ComfyRestExt"
display_name = "Comfy-REST-Ext"
category = "utility"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
